Fix font-weight to 550 because 400 not visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,5 +16,5 @@
 
 .menu .menu__item--is-active{
     text-decoration: underline;
-    font-weight: 400;
+    font-weight: 550;
 }
